# textools

./: .gitignore  .pre-commit-config.yaml  README.md  conversion.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
src/: conversion.py  emoticons.py  emotions_char.py  removal.py
tests/: __init__.py  pathmagic.py  test_conv_accents.py  test_conv_dongers.py  test_conv_emojis.py  test_conv_emoticons.py  test_rm_punctuation.py  test_rm_stopwords.py  test_rm_urls.py
textools/: __init__.py  conversion.py  emotions_char.py  removal.py
